# Eternal-Infinity

./: .cache  .gitignore  application.yml  config.py  cookie.txt  main.py  pyproject.toml  requirement.txt  requirements.txt  start.sh
Classes/: __init__.py  dj_ids.json  keyword.json  translate.json  youtube.json
Classes/Help/: Embeds.py  View.py  __init__.py
Classes/Imports/: __init__.py
Classes/Music/: Container.py  Controller.py  Database.py  Enum.py  Song.py  Translator.py  View.py  __init__.py
Commands/: Help.py  Music.py  __init__.py
Core/: Music.py
Functions/: Music.py  __init__.py
Global/: Logger.py  Meta.py  Type.py  __init__.py
cmds/help/: __init__.py  help_method.py
cmds/music/: __init__.py  audio_methods.py  cls.py  cmds.py  database.py  dl.py  embeds.py  functions.py  guilds.json  members.json  methods.py  module.py  music.json  music_template.json  to_do_list.txt  video.sh  video_method.py  views.py
cmds/tasks/: __init__.py
cmds/ui_test/: __init__.py
core/: cog_append.py
web/backend/: __init__.py
