[tool.poetry]
name = "Eternal-Infinity"
version = "0.1.0"
description = ""
authors = ["blood_night <rexwu9204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0a3"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
npytdl = "^4.0.4"
orjson = "^3.6.5"
pynacl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
